--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>testweb</module>
         <module>test-springboot</module>
         <module>test-springcloud</module>
+        <module>test-jvm</module>
     </modules>
     <packaging>pom</packaging>
 
