--- a/test-netty/pom.xml
+++ b/test-netty/pom.xml
@@ -3,16 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>test-parent</artifactId>
-        <groupId>com.jay.test</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.4.1.RELEASE</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-    <artifactId>test-netty</artifactId>
 
-    <properties>
-        <slf4j.version>1.7.7</slf4j.version>
-    </properties>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.jay.test</groupId>
+    <artifactId>test-netty</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
@@ -22,19 +21,18 @@
             <version>4.1.23.Final</version>
         </dependency>
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
         <dependency>
-         <groupId>org.slf4j</groupId>
-           <artifactId>slf4j-api</artifactId>
-          <version>${slf4j.version}</version>
-         </dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
         <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-log4j12</artifactId>
-        <version>${slf4j.version}</version>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.16</version>
         </dependency>
     </dependencies>
 </project>
