--- a/test-springboot/pom.xml
+++ b/test-springboot/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.4.1.RELEASE</version>
+        <version>1.5.6.RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.jay.test</groupId>
@@ -35,18 +35,25 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-redis</artifactId>
+            <version>1.3.1.RELEASE</version>
         </dependency>
 
         <!-- 持久层 -->
-        <!--<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>1.3.0</version>
-        </dependency>-->
+            <version>1.3.1</version>
+        </dependency>
 
         <!-- h2内存数据库 -->
         <!--<dependency>
@@ -54,11 +61,11 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>-->
-       <!-- <dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.35</version>
-        </dependency>-->
+        </dependency>
         <!-- alibaba的druid数据库连接池 -->
         <!--<dependency>
             <groupId>com.alibaba</groupId>
@@ -66,6 +73,7 @@
             <version>1.0.2</version>
         </dependency>-->
 
+        <!-- 插件依赖 -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
