--- a/test-springboot/src/main/resources/application.yml
+++ b/test-springboot/src/main/resources/application.yml
@@ -23,7 +23,7 @@ mybatis:
   mapper-locations: classpath:mapper/*.xml
 
 mapper:
-  mappers: com.jay.test.springboot.common.BaseMapper
+  mappers: BaseMapper
   identity: MYSQL
 
 pagehelper:
