--- a/test-springcloud/eureka-server/src/main/resources/application.yml
+++ b/test-springcloud/eureka-server/src/main/resources/application.yml
@@ -11,6 +11,7 @@ eureka:
     fetch-registry: false
     service-url:
       defaultZone: http://root:root@localhost:8761/eureka/
+    register-with-eureka: false
   server:
     enable-self-preservation: false
   instance:
