--- a/test-springcloud/pom.xml
+++ b/test-springcloud/pom.xml
@@ -15,6 +15,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>eureka-server</module>
+        <module>user-service</module>
     </modules>
 
     <dependencyManagement>
