--- a/test-springcloud/pom.xml
+++ b/test-springcloud/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>eureka-server</module>
         <module>user-service</module>
+        <module>config-server</module>
     </modules>
 
     <dependencyManagement>
