--- a/test-springboot/pom.xml
+++ b/test-springboot/pom.xml
@@ -73,6 +73,22 @@
             <version>1.0.2</version>
         </dependency>-->
 
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-base</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-web</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-annotation</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
         <!-- 插件依赖 -->
         <dependency>
             <groupId>org.projectlombok</groupId>
