--- a/test-springcloud/user-service/src/main/resources/application.yml
+++ b/test-springcloud/user-service/src/main/resources/application.yml
@@ -1,2 +1,20 @@
+spring:
+  datasource:
+    url: jdbc:mysql://47.94.87.93:3306/paascloud_uac?characterEncoding=utf8&useSSL=false
+    username: ${spring.datasource.username}
+    password: ${spring.datasource.password}
+    driver-class-name: com.mysql.jdbc.Driver
+mybatis:
+  type-aliases-package: com.jay.test.springcloud.model
+  mapper-locations: classpath:mapper/*.xml
 
+mapper:
+  mappers: BaseMapper
+  identity: MYSQL
+
+pagehelper:
+  helperDialect: mysql
+  reasonable: true
+  supportMethodsArguments: true
+  params: count=countSql
 
