--- a/test-springcloud/pom.xml
+++ b/test-springcloud/pom.xml
@@ -17,6 +17,8 @@
         <module>eureka-server</module>
         <module>user-service</module>
         <module>config-server</module>
+        <module>service-api</module>
+        <module>service-impl</module>
     </modules>
 
     <dependencyManagement>
