--- a/test-springcloud/service-impl/pom.xml
+++ b/test-springcloud/service-impl/pom.xml
@@ -9,7 +9,9 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>user-service</artifactId>
+    <groupId>com.jay.test.service.impl</groupId>
+    <artifactId>service-impl</artifactId>
+
 
     <dependencies>
         <dependency>
