--- a/test-springcloud/config-server/src/main/resources/application.yml
+++ b/test-springcloud/config-server/src/main/resources/application.yml
@@ -8,3 +8,8 @@ spring:
           uri: https://gitee.com/jerryos/test-config
 server:
   port: 1201
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
