--- a/test-springcloud/common/pom.xml
+++ b/test-springcloud/common/pom.xml
@@ -6,21 +6,13 @@
         <artifactId>test-springcloud</artifactId>
         <groupId>com.jay.test</groupId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <artifactId>common</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>common-base</module>
+    </modules>
 
-    <artifactId>config-server</artifactId>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-config-server</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-eureka</artifactId>
-        </dependency>
-    </dependencies>
 
 </project>
