--- a/test-springcloud/pom.xml
+++ b/test-springcloud/pom.xml
@@ -15,10 +15,10 @@
     <packaging>pom</packaging>
     <modules>
         <module>eureka-server</module>
-        <module>user-service</module>
         <module>config-server</module>
         <module>service-api</module>
         <module>service-impl</module>
+        <module>common</module>
     </modules>
 
     <dependencyManagement>
