--- a/test-springcloud/service-api/pom.xml
+++ b/test-springcloud/service-api/pom.xml
@@ -15,6 +15,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>uac-service-api</module>
+        <module>omc-service-api</module>
     </modules>
 
     <dependencies>
@@ -27,6 +28,10 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.16.16</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
         </dependency>
     </dependencies>
 
