--- a/test-springcloud/service-impl/pom.xml
+++ b/test-springcloud/service-impl/pom.xml
@@ -11,9 +11,18 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.jay.test.service.impl</groupId>
     <artifactId>service-impl</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>omc-service</module>
+    </modules>
 
 
     <dependencies>
+        <dependency>
+            <groupId>com.jay.test</groupId>
+            <artifactId>common-base</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka</artifactId>
@@ -21,6 +30,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
