--- a/test-springboot/pom.xml
+++ b/test-springboot/pom.xml
@@ -78,11 +78,11 @@
             <artifactId>easypoi-base</artifactId>
             <version>3.1.0</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>cn.afterturn</groupId>
             <artifactId>easypoi-web</artifactId>
             <version>3.1.0</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>cn.afterturn</groupId>
             <artifactId>easypoi-annotation</artifactId>
